melhor homepage e menu

--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Creche Batatinha</title>
-
 </head>
-
 <header>
     <div class="menu-container">
-        <div class="home ">
-            <h1 class="up-text">CRECHE</h1>
-            <h2 class="down-text">BATATINHA</h2>
+        <div class="home">
+            <a href="index.html"><img src="/assets/Logo Positivo.png" class="logo"></a>
         </div>
-        <nav class="nav">     
-            <button class="btn lista">Ver lista de Miaus</button>
-            <button class="btn cadastro">Cadastrar Miaus</button>
+        <nav class="nav">
+            <a href="index.html" class="logo2">Creche Batatinha</a>     
+            <a href="/lista_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
     </div>
 </header>
-
 <body>
-    <h1 class="main-text front-text">Boas-vindas a Creche Batatinha,</h1>
-    <h2 class="main-text minor-text">Seu Miau Feliz!</h2>
-
-    <script src="script.js"></script>
+    <div class="container">
+        <h1 class="front-text">Boas-vindas a Creche <br>Batatinha,</h1>
+         <h2 class="minor-text">Seu Miau Feliz!</h2>
+    </div>
 </body>
+<script src="script.js"></script>
 </html>
