Página lista miaus

--- a/lista_miaus/index.html
+++ b/lista_miaus/index.html
@@ -5,17 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style-menu.css">
     <title>Lista de Miaus</title>
 </head>
 
 <header>
+    <div class="menu-container">
+        <div class="home">
+            <a href="index.html"><img src="/assets/Logo Positivo.png" class="logo"></a>
+        </div>
+        <nav class="nav">
+            <a href="index.html" class="logo2">Creche Batatinha</a>     
+            <a href="/lista_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+        </nav>
+    </div>
 </header>
-
 <body>
-    <h1>Lista de Miaus</h1>
-
-
-    
+    <div  class="container-full">
+        <div class="container">
+            <h1>Lista de miaus</h1>
+            <div class="list">
+                <ul>
+                    <li>
+                        <div>
+                            <section>
+                                <img src="cat-profile.png" alt="">
+                                <h2>Nome</h2>
+                            </section>
+                            <section>
+                                <a class="btn-notes" href="">Lançar notas</a>
+                            </section>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>    
     <script src="script.js"></script>
 </body>
 
