--- a/listagem_de_gatos/index.html
+++ b/listagem_de_gatos/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-menu.css">
-    <title>Creche Batatinha</title>
+    <title>Lista de Miaus</title>
 </head>
 <header>
     <div class="menu-container">
@@ -28,11 +28,7 @@
 </header>
 
 <body>
-    <div class="container">
-        <h1 class="front-text">Boas-vindas a Creche <br>Batatinha,</h1>
-        <h2 class="minor-text">Seu Miau Feliz!</h2>
-    </div>
+
 </body>
-<script src="script.js"></script>
 
 </html>
