Página de listagem e header aplicados

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <header>
     <div class="menu-container">
         <div class="home">
-            <a href="index.html"><img src="/assets/Logo Positivo.png" class="logo"></a>
+            <a href="index.html"><img src="./assets/Logo Positivo.png" class="logo-claro"></a>
         </div>
         <nav class="nav">
-            <a href="index.html" class="logo2">Creche Batatinha</a>
-            <a href="/lista_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
-            <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+            <a href="index.html" class="logo-rosa">Creche Batatinha</a>
+            <a href="./listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="./cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
     </div>
 </header>
