--- a/listagem_de_gatos/index.html
+++ b/listagem_de_gatos/index.html
@@ -9,25 +9,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-menu.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style-menu.css">
+    <link rel="stylesheet" href="../css/listagem.css">
     <title>Lista de Miaus</title>
 </head>
-<header>
-    <div class="menu-container">
-        <div class="home">
-            <a href="index.html"><img src="/assets/Logo Positivo.png" class="logo"></a>
-        </div>
-        <nav class="nav">
-            <a href="index.html" class="logo2">Creche Batatinha</a>
-            <a href="/lista_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
-            <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
-        </nav>
-    </div>
-</header>
 
 <body>
+    <header>
+        <div class="menu-container">
+            <div class="home">
+                <a href="../index.html"><img class="logo-claro" src="../assets/Logo Positivo.png"
+                        alt="Logo da Batatinha Claro"></a>
+            </div>
+            <nav class="nav">
+                <a class="logo-rosa" href="index.html">Creche Batatinha</a>
+                <a class="btn lista" href="./index.html">Ver lista de Miaus</a>
+                <a class="btn cadastro" href="./cadastro_gatos/index.html">Cadastrar Miau</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+
+    </main>
 
 </body>
 
