responsivo menu adicionado

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="home">
             <a href="index.html"><img src="/assets/Logo Positivo.png" class="logo"></a>
         </div>
-        <nav class="nav">
-            <a href="index.html" class="logo2">Creche Batatinha</a>     
+        <span class="icone-menu"></span>
+        <nav class="nav">  
             <a href="/lista_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
             <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
