--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="home">
             <a href="index.html"><img src="/assets/Logo Positivo.png" class="logo"></a>
         </div>
-        <span class="icone-menu"></span>
+        <p class="menu">Menu<span class="icone-menu"></span></p>
         <nav class="nav">  
             <a href="/lista_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
             <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
