--- a/cadastro_gatos/index.html
+++ b/cadastro_gatos/index.html
@@ -5,16 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Gatos</title>
-</head>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style-menu.css">
 
-<header>
-</header>
-
-<body>
-    <h1>Cadastro de um novo Miau</h1>
-
-    
+    <script src="salvaFoto.js"></script>
     <script src=""></script>
+</head>
+<header>
+    <div class="menu-container">
+        <div class="home">
+            <a href="index.html"><img src="../assets/Logo Positivo.png" class="logo"></a>
+        </div>
+        <nav class="nav">
+            <a href="../assets/Logo Positivo.png" class="logo2">Creche Batatinha</a>     
+            <a href="/lista_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+        </nav>
+    </div>
+</header>
+<body>
+    <div class="container">
+        <form action="cadastro-gatos">
+            <div class="titulo-cadastro">
+                <h2>Cadastro de um novo Miau</h2>
+            </div>
+            <div class="input-wrapper">
+                <input type="file" id="input-file" class="input-file" />
+                <label for="input-file" class="input-label">+ Clique para adicionar foto</label>
+                <img  src="fotos/gatomalandro-PhotoRoom.png-PhotoRoom (1).png" alt="Foto selecionada" id="preview-image" class="preview-image" />
+              </div>
+            <div class="dados-gato-cliente">
+                <input class="pinto" type="text" id="Nome-miau" placeholder="Nome do(a) Miau">
+                <input class="pinto" type="text" id="Nome-dona" placeholder="Nome da pessoa dona">
+            </div>
+            <div class="btn-cadastro">
+                <button id="btn-1">Cancelar cadastro</button>
+                <button id="btn-2">Salvar cadastro</button>
+            </div>
+        </form>
+    </div>
 </body>
-
 </html>
