Lógica para pegar os dados do localStorage

--- a/listagem_de_gatos/index.html
+++ b/listagem_de_gatos/index.html
@@ -25,12 +25,18 @@
             <nav class="nav">
                 <a class="logo-rosa" href="index.html">Creche Batatinha</a>
                 <a class="btn lista" href="./index.html">Ver lista de Miaus</a>
-                <a class="btn cadastro" href="./cadastro_gatos/index.html">Cadastrar Miau</a>
+                <a class="btn cadastro" href="../cadastro_gatos/index.html">Cadastrar Miau</a>
             </nav>
         </div>
     </header>
     <main>
+        <section class="lista-container">
+            <h1 class="lista-miaus">Lista de Miaus</h1>
+            <ul class="miaus-cadastrados">
 
+            </ul>
+            <script src="../listagem_de_gatos/busca-de-dados.js"></script>
+        </section>
     </main>
 
 </body>
