--- a/cadastro_gatos/index.html
+++ b/cadastro_gatos/index.html
@@ -5,22 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Gatos</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../style-menu.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style_cadastro.css">
+    <link rel="stylesheet" href="../css/style-menu.css">
 
-    <script src="salvaFoto.js"></script>
-    <script src=""></script>
+
 </head>
 <header>
     <div class="menu-container">
         <div class="home">
-            <a href="index.html"><img src="../assets/Logo Positivo.png" class="logo"></a>
+            <a href="index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"></a>
         </div>
         <nav class="nav">
-            <a href="../assets/Logo Positivo.png" class="logo2">Creche Batatinha</a>     
-            <a href="/lista_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
-            <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+            <a href="index.html" class="logo-rosa">Creche Batatinha</a>
+            <a href="./listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="./cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
     </div>
 </header>
@@ -30,20 +29,23 @@
             <div class="titulo-cadastro">
                 <h2>Cadastro de um novo Miau</h2>
             </div>
-            <div class="input-wrapper">
+            <div class="input-foto-gato">
                 <input type="file" id="input-file" class="input-file" />
                 <label for="input-file" class="input-label">+ Clique para adicionar foto</label>
-                <img  src="fotos/gatomalandro-PhotoRoom.png-PhotoRoom (1).png" alt="Foto selecionada" id="preview-image" class="preview-image" />
+                <img  src="../assets/gato.png" alt="Foto selecionada" id="preview-image" class="previa-foto" />
               </div>
-            <div class="dados-gato-cliente">
-                <input class="pinto" type="text" id="Nome-miau" placeholder="Nome do(a) Miau">
-                <input class="pinto" type="text" id="Nome-dona" placeholder="Nome da pessoa dona">
+            <div id="input-form" class="dados-gato-cliente">
+                <input class="input-forms" type="text" id="nome-gato" placeholder="Nome do(a) Miau" required>
+                <input class="input-forms" type="text" id="nome-dona" placeholder="Nome da pessoa dona" required>
             </div>
             <div class="btn-cadastro">
-                <button id="btn-1">Cancelar cadastro</button>
-                <button id="btn-2">Salvar cadastro</button>
+                <a href="../index.html" class="botoes-cadastro" id="btn1">Cancelar cadastro</a>
+                <button  class="botoes-cadastro" id="btn2">Salvar cadastro</button>
             </div>
         </form>
     </div>
+    <script src="script.js"></script>
+    <script src="salvaFoto.js"></script>
+    <script src="salvarCache.js"></script>
 </body>
 </html>
