--- a/listagem_de_gatos/index.html
+++ b/listagem_de_gatos/index.html
@@ -20,12 +20,12 @@
         <div class="menu-container">
             <div class="home">
                 <a href="../index.html"><img class="logo-claro" src="../assets/Logo Positivo.png"
-                        alt="Logo da Batatinha Claro"></a>
+                        alt="Logo da Creche Batatinha"></a>
             </div>
+            <p class="menu">Menu<span class="icone-menu"></span></p>
             <nav class="nav">
-                <a class="logo-rosa" href="index.html">Creche Batatinha</a>
-                <a class="btn lista" href="./index.html">Ver lista de Miaus</a>
-                <a class="btn cadastro" href="../cadastro_gatos/index.html">Cadastrar Miau</a>
+                <a href="./index.html" class="btn lista">Ver lista de Miaus</a>
+                <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
             </nav>
         </div>
     </header>
