--- a/listagem_de_gatos/index.html
+++ b/listagem_de_gatos/index.html
@@ -23,9 +23,9 @@
                         alt="Logo da Batatinha Claro"></a>
             </div>
             <nav class="nav">
-                <a class="logo-rosa" href="index.html">Creche Batatinha</a>
-                <a class="btn lista" href="./index.html">Ver lista de Miaus</a>
-                <a class="btn cadastro" href="./cadastro_gatos/index.html">Cadastrar Miau</a>
+                <a class="logo-rosa" href="../index.html">Creche Batatinha</a>
+                <a class="btn lista" href="../listagem_de_gatos/index.html">Ver lista de Miaus</a>
+                <a class="btn cadastro" href="../cadastro_gatos/index.html">Cadastrar Miau</a>
             </nav>
         </div>
     </header>
