--- a/index.html
+++ b/index.html
@@ -17,19 +17,12 @@
 <header>
     <div class="menu-container">
         <div class="home">
-            <a href="./index.html"><img src="./assets/Logo Positivo.png" class="logo-claro"
-                    alt="Logo da Creche Batatinha"></a>
+            <a href="index.html"><img src="./assets/Logo Positivo.png" class="logo-claro"></a>
         </div>
         <p class="menu">Menu<span class="icone-menu"></span></p>
-<<<<<<< HEAD
         <nav class="nav">  
-            <a href="listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
-            <a href="cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
-=======
-        <nav class="nav">
-            <a href="./listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="/listagem_de_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
             <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
->>>>>>> d66b429223e7ab47097bdab4311a784b3e85b79d
         </nav>
     </div>
 </header>
