Lógica para pegar os dados do localStorage

--- a/cadastro_gatos/index.html
+++ b/cadastro_gatos/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,11 +19,12 @@
         </div>
         <nav class="nav">
             <a href="index.html" class="logo-rosa">Creche Batatinha</a>
-            <a href="./listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="../listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
             <a href="./cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
     </div>
 </header>
+
 <body>
     <div class="container">
         <form action="cadastro-gatos">
@@ -32,15 +34,15 @@
             <div class="input-foto-gato">
                 <input type="file" id="input-file" class="input-file" />
                 <label for="input-file" class="input-label">+ Clique para adicionar foto</label>
-                <img  src="../assets/gato.png" alt="Foto selecionada" id="preview-image" class="previa-foto" />
-              </div>
+                <img src="../assets/gato.png" alt="Foto selecionada" id="preview-image" class="previa-foto" />
+            </div>
             <div id="input-form" class="dados-gato-cliente">
                 <input class="input-forms" type="text" id="nome-gato" placeholder="Nome do(a) Miau" required>
                 <input class="input-forms" type="text" id="nome-dona" placeholder="Nome da pessoa dona" required>
             </div>
             <div class="btn-cadastro">
                 <a href="../index.html" class="botoes-cadastro" id="btn1">Cancelar cadastro</a>
-                <button  class="botoes-cadastro" id="btn2">Salvar cadastro</button>
+                <button class="botoes-cadastro" id="btn2">Salvar cadastro</button>
             </div>
         </form>
     </div>
@@ -48,4 +50,5 @@
     <script src="salvaFoto.js"></script>
     <script src="salvarCache.js"></script>
 </body>
+
 </html>
