--- a/listagem_de_gatos/index.html
+++ b/listagem_de_gatos/index.html
@@ -19,12 +19,12 @@
     <header>
         <div class="menu-container">
             <div class="home">
-                <a href="../index.html"><img class="logo-claro" src="../assets/Logo Positivo.png"
+                <a href="./index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"
                         alt="Logo da Creche Batatinha"></a>
             </div>
             <p class="menu">Menu<span class="icone-menu"></span></p>
             <nav class="nav">
-                <a href="./index.html" class="btn lista">Ver lista de Miaus</a>
+                <a href="./listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
                 <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
             </nav>
         </div>
@@ -35,10 +35,10 @@
             <ul class="miaus-cadastrados">
 
             </ul>
-            <script src="../listagem_de_gatos/busca-de-dados.js"></script>
         </section>
     </main>
-
+    <script src="../listagem_de_gatos/busca-de-dados.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
