Ajuste direcionamento dos botões

--- a/cadastro_gatos/index.html
+++ b/cadastro_gatos/index.html
@@ -20,7 +20,7 @@
         <nav class="nav">
             <a href="index.html" class="logo-rosa">Creche Batatinha</a>
             <a href="../listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
-            <a href="./cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+            <a href="./index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
     </div>
 </header>
