--- a/listagem_de_gatos/index.html
+++ b/listagem_de_gatos/index.html
@@ -19,14 +19,13 @@
     <header>
         <div class="menu-container">
             <div class="home">
-                <a href="./index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"
+                <a href="../index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"
                         alt="Logo da Creche Batatinha"></a>
             </div>
             <p class="menu">Menu<span class="icone-menu"></span></p>
             <nav class="nav">
                 <a href="./index.html" class="btn lista">Ver lista de Miaus</a>
                 <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
-                >>>>>>> d66b429223e7ab47097bdab4311a784b3e85b79d
             </nav>
         </div>
     </header>
