--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-menu.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-menu.css">
     <title>Creche Batatinha</title>
 </head>
 <header>
@@ -21,7 +21,7 @@
         </div>
         <p class="menu">Menu<span class="icone-menu"></span></p>
         <nav class="nav">
-            <a href="/listagem_de_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="./listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
             <a href="./cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
     </div>
