--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap"rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style-menu.css">
@@ -27,7 +25,7 @@
         <nav class="nav">  
             <a href="../listagem_de_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
             <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
-            </nav>
+        </nav>
     </header>
     <div class="container">
         <h1 class="front-text">Boas-vindas a Creche <br>Batatinha,</h1>
