correções de endereçamento

--- a/lancamento_notas/index.html
+++ b/lancamento_notas/index.html
@@ -48,10 +48,10 @@
     </header>
     <main class="card ">
         <section class="title-lacamento-notas container">
-            <a href="../index.html"><button class="seta"></button></a>
+            <a href="/listagem_de_gatos/index.html"><button class="seta"></button></a>
 
             <div class="logo-gato">
-                <img src="../assets/ava.svg" alt="gatinho">
+                <img src="/assets/ava.svg" alt="gatinho" id="avata">
                 <h1>Buzz</h1>
             </div>
 
