Responsivo página listagem_de_gatos

--- a/listagem_de_gatos/index.html
+++ b/listagem_de_gatos/index.html
@@ -19,15 +19,16 @@
     <header>
         <div class="menu-container">
             <div class="home">
-                <a href="../index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"
-                        alt="Logo da Creche Batatinha"></a>
+                <a href="../index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"></a>
             </div>
-            <p class="menu">Menu<span class="icone-menu"></span></p>
-            <nav class="nav">
-                <a href="./index.html" class="btn lista">Ver lista de Miaus</a>
-                <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
-            </nav>
+            <div>
+                <p class="menu">Menu<span class="icone-menu"></span></p>
+            </div>
         </div>
+        <nav class="nav">
+            <a href="./index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+        </nav>
     </header>
     <main>
         <section class="lista-container">
