Ajuste no redirecionamento dos botões

--- a/cadastro_gatos/index.html
+++ b/cadastro_gatos/index.html
@@ -12,20 +12,22 @@
 
 
 </head>
-<header>
-    <div class="menu-container">
-        <div class="home">
-            <a href="index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"></a>
+
+<body>
+    <header>
+        <div class="menu-container">
+            <div class="home">
+                <a href="../index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"></a>
+            </div>
+            <div>
+                <p class="menu">Menu<span class="icone-menu"></span></p>
+            </div>
         </div>
         <nav class="nav">
-            <a href="index.html" class="logo-rosa">Creche Batatinha</a>
             <a href="../listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
             <a href="./index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
-    </div>
-</header>
-
-<body>
+    </header>
     <div class="container">
         <form action="cadastro-gatos">
             <div class="titulo-cadastro">
