--- a/lancamento_notas/index.html
+++ b/lancamento_notas/index.html
@@ -39,12 +39,14 @@
             <div class="home">
                 <a href="../index.html"><img src="../assets/Logo Positivo.png" class="logo-claro"></a>
             </div>
-            <p class="menu">Menu<span class="icone-menu"></span></p>
-            <nav class="nav">
-                <a href="../listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
-                <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
-            </nav>
+            <div>
+                <p class="menu">Menu<span class="icone-menu"></span></p>
+            </div>
         </div>
+        <nav class="nav">
+            <a href="../listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+        </nav>
     </header>
     <main class="card ">
         <section class="title-lacamento-notas container">
