--- a/lancamento_notas/index.html
+++ b/lancamento_notas/index.html
@@ -58,8 +58,7 @@
             </div>
 
             <div class="data">
-                <p>Abril/2023
-                <p>
+                <p></p>
             </div>
 
             <div class="linha-title"></div>
@@ -75,11 +74,11 @@
 
                 <ul class="containerPatas container patasSocialicacao">
                     <li class="Socialicacao pata on oculta"></li>
-                    <li class="Socialicacao pata on" data-avaliacao="1"></li>
-                    <li class="Socialicacao pata on" data-avaliacao="2"></li>
-                    <li class="Socialicacao pata on" data-avaliacao="3"></li>
-                    <li class="Socialicacao pata on" data-avaliacao="4"></li>
-                    <li class="Socialicacao pata on" data-avaliacao="5"></li>
+                    <li class="Socialicacao pata on" data-socialicacao="1"></li>
+                    <li class="Socialicacao pata on" data-socialicacao="2" id="soc2"></li>
+                    <li class="Socialicacao pata on" data-socialicacao="3"></li>
+                    <li class="Socialicacao pata on" data-socialicacao="4"></li>
+                    <li class="Socialicacao pata on" data-socialicacao="5"></li>
                 </ul>
 
                 <div class="linha"></div>
@@ -92,12 +91,12 @@
                 </div>
 
                 <ul class="containerPatas container patasSoneca">
-                    <li class="Soneca pata on oculta" data-avaliacao="0"></li>
-                    <li class="Soneca pata on" data-avaliacao="1"></li>
-                    <li class="Soneca pata on" data-avaliacao="2"></li>
-                    <li class="Soneca pata on" data-avaliacao="3"></li>
-                    <li class="Soneca pata on" data-avaliacao="4"></li>
-                    <li class="Soneca pata on" data-avaliacao="5"></li>
+                    <li class="Soneca pata on oculta"></li>
+                    <li class="Soneca pata on" data-soneca="1"></li>
+                    <li class="Soneca pata on" data-soneca="2"></li>
+                    <li class="Soneca pata on" data-soneca="3"></li>
+                    <li class="Soneca pata on" data-soneca="4"></li>
+                    <li class="Soneca pata on" data-soneca="5"></li>
                 </ul>
 
                 <div class="linha"></div>
@@ -111,11 +110,11 @@
 
                 <ul class="containerPatas container patasAlimentacao">
                     <li class="Alimentacao pata on oculta"></li>
-                    <li class="Alimentacao pata on" data-avaliacao="1"></li>
-                    <li class="Alimentacao pata on" data-avaliacao="2"></li>
-                    <li class="Alimentacao pata on" data-avaliacao="3"></li>
-                    <li class="Alimentacao pata on" data-avaliacao="4"></li>
-                    <li class="Alimentacao pata on" data-avaliacao="5"></li>
+                    <li class="Alimentacao pata on" data-alimentacao="1"></li>
+                    <li class="Alimentacao pata on" data-alimentacao="2"></li>
+                    <li class="Alimentacao pata on" data-alimentacao="3"></li>
+                    <li class="Alimentacao pata on" data-alimentacao="4"></li>
+                    <li class="Alimentacao pata on" data-alimentacao="5"></li>
                 </ul>
 
                 <div class="linha"></div>
@@ -129,11 +128,11 @@
 
                 <ul class="containerPatas container patasBrincadeiras">
                     <li class="Brincadeiras pata on oculta"></li>
-                    <li class="Brincadeiras pata on" data-avaliacao="1"></li>
-                    <li class="Brincadeiras pata on" data-avaliacao="2"></li>
-                    <li class="Brincadeiras pata on" data-avaliacao="3"></li>
-                    <li class="Brincadeiras pata on" data-avaliacao="4"></li>
-                    <li class="Brincadeiras pata on" data-avaliacao="5"></li>
+                    <li class="Brincadeiras pata on" data-brincadeiras="1"></li>
+                    <li class="Brincadeiras pata on" data-brincadeiras="2"></li>
+                    <li class="Brincadeiras pata on" data-brincadeiras="3"></li>
+                    <li class="Brincadeiras pata on" data-brincadeiras="4"></li>
+                    <li class="Brincadeiras pata on" data-brincadeiras="5"></li>
                 </ul>
 
                 <div class="linha"></div>
@@ -147,11 +146,11 @@
 
                 <ul class="containerPatas container patasPreguicinha">
                     <li class="Preguicinha pata on oculta"></li>
-                    <li class="Preguicinha pata on" data-avaliacao="1"></li>
-                    <li class="Preguicinha pata on" data-avaliacao="2"></li>
-                    <li class="Preguicinha pata on" data-avaliacao="3"></li>
-                    <li class="Preguicinha pata on" data-avaliacao="4"></li>
-                    <li class="Preguicinha pata on" data-avaliacao="5"></li>
+                    <li class="Preguicinha pata on" data-preguicinha="1"></li>
+                    <li class="Preguicinha pata on" data-preguicinha="2"></li>
+                    <li class="Preguicinha pata on" data-preguicinha="3"></li>
+                    <li class="Preguicinha pata on" data-preguicinha="4"></li>
+                    <li class="Preguicinha pata on" data-preguicinha="5"></li>
                 </ul>
 
                 <div class="linha"></div>
@@ -165,11 +164,11 @@
 
                 <ul class="containerPatas container patasFotos">
                     <li class="Fotos pata on oculta"></li>
-                    <li class="Fotos pata on" data-avaliacao="1"></li>
-                    <li class="Fotos pata on" data-avaliacao="2"></li>
-                    <li class="Fotos pata on" data-avaliacao="3"></li>
-                    <li class="Fotos pata on" data-avaliacao="4"></li>
-                    <li class="Fotos pata on" data-avaliacao="5"></li>
+                    <li class="Fotos pata on" data-fotos="1"></li>
+                    <li class="Fotos pata on" data-fotos="2"></li>
+                    <li class="Fotos pata on" data-fotos="3"></li>
+                    <li class="Fotos pata on" data-fotos="4"></li>
+                    <li class="Fotos pata on" data-fotos="5"></li>
                 </ul>
 
                 <div class="linha"></div>
@@ -177,7 +176,7 @@
 
             <section class="avaliacao container botao-responsivo">
                 <input type="button" value="Imprimir Boletim" class="botao"></input>
-                <input type="submit" value="Salvar notas" class="botao"></input>
+                <input type="button" value="Salvar notas" class="botao" data-botao></input>
             </section>
         </form>
 
@@ -186,6 +185,7 @@
 
 
     <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
