get e setando valores para storage

--- a/lancamento_notas/index.html
+++ b/lancamento_notas/index.html
@@ -74,8 +74,8 @@
 
                 <ul class="containerPatas container patasSocialicacao">
                     <li class="Socialicacao pata on oculta"></li>
-                    <li class="Socialicacao pata on" data-socialicacao="1"></li>
-                    <li class="Socialicacao pata on" data-socialicacao="2" id="soc2"></li>
+                    <li class="Socialicacao pata on acti" data-socialicacao="1"></li>
+                    <li class="Socialicacao pata on acti" data-socialicacao="2" id="soc2"></li>
                     <li class="Socialicacao pata on" data-socialicacao="3"></li>
                     <li class="Socialicacao pata on" data-socialicacao="4"></li>
                     <li class="Socialicacao pata on" data-socialicacao="5"></li>
@@ -92,8 +92,8 @@
 
                 <ul class="containerPatas container patasSoneca">
                     <li class="Soneca pata on oculta"></li>
-                    <li class="Soneca pata on" data-soneca="1"></li>
-                    <li class="Soneca pata on" data-soneca="2"></li>
+                    <li class="Soneca pata on act" data-soneca="1"></li>
+                    <li class="Soneca pata on act" data-soneca="2"></li>
                     <li class="Soneca pata on" data-soneca="3"></li>
                     <li class="Soneca pata on" data-soneca="4"></li>
                     <li class="Soneca pata on" data-soneca="5"></li>
