--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="menu">Menu<span class="icone-menu"></span></p>
         <nav class="nav">  
             <a href="/listagem_de_miaus/index.html" class="btn lista">Ver lista de Miaus</a>
-            <a href="/cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+            <a href="./cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
     </div>
 </header>
