--- a/cadastro_gatos/index.html
+++ b/cadastro_gatos/index.html
@@ -51,6 +51,7 @@
     <script src="script.js"></script>
     <script src="salvaFoto.js"></script>
     <script src="salvarCache.js"></script>
+    <script src="botaoAtivar.js"></script>
 </body>
 
 </html>
