--- a/cadastro_gatos/index.html
+++ b/cadastro_gatos/index.html
@@ -48,7 +48,7 @@
             </div>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
     <script src="salvaFoto.js"></script>
     <script src="salvarCache.js"></script>
     <script src="botaoAtivar.js"></script>
