ajuste responsivo cadastro

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style-menu.css">
     <title>Creche Batatinha</title>
 </head>
-
 <body>
     <header>
         <div class="menu-container">
@@ -35,6 +33,6 @@
         <h2 class="minor-text">Seu Miau Feliz!</h2>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="../creche-batatinha-equipe03-main/script.js"></script>
 
 </html>
