--- a/cadastro_gatos/index.html
+++ b/cadastro_gatos/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Gatos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style_cadastro.css">
     <link rel="stylesheet" href="../css/style-menu.css">
@@ -25,8 +28,9 @@
         </div>
         <nav class="nav">
             <a href="../listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
-            <a href="./index.html" class="btn cadastro">Cadastrar Miau</a>
+            <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
+        
     </header>
     <div class="container">
         <form action="cadastro-gatos">
@@ -49,8 +53,8 @@
         </form>
     </div>
     <script src="script.js"></script>
+    <script src="../script.js"></script>
     <script src="salvaFoto.js"></script>
     <script src="salvarCache.js"></script>
 </body>
-
 </html>
