--- a/index.html
+++ b/index.html
@@ -33,6 +33,5 @@
         <h2 class="minor-text">Seu Miau Feliz!</h2>
     </div>
 </body>
-<script src="../creche-batatinha-equipe03-main/script.js"></script>
-
+<script src="../script.js"></script>
 </html>
