--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
         <h2 class="minor-text">Seu Miau Feliz!</h2>
     </div>
 </body>
-<script src="../script.js"></script>
+<script src="script.js"></script>
 </html>
