--- a/lancamento_notas/index.html
+++ b/lancamento_notas/index.html
@@ -44,16 +44,16 @@
             </div>
         </div>
         <nav class="nav">
-            <a href="../listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
-            <a href="../cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
+            <a href="./listagem_de_gatos/index.html" class="btn lista">Ver lista de Miaus</a>
+            <a href="./cadastro_gatos/index.html" class="btn cadastro">Cadastrar Miau</a>
         </nav>
     </header>
     <main class="card ">
         <section class="title-lacamento-notas container">
-            <a href="../listagem_de_gatos/index.html"><button class="seta"></button></a>
+            <a href="./listagem_de_gatos/index.html"><button class="seta"></button></a>
 
             <div class="logo-gato">
-                <img src="../assets/ava.svg" alt="gatinho" id="avata">
+                <img src="./assets/ava.svg" alt="gatinho" id="avata">
                 <h1>Buzz</h1>
             </div>
 
